# LongContext

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: README.md
configs/datasets/: loogle.yaml  zai_benchmarks.yaml
configs/eval/: evalscope_smoke.yaml
configs/labeling/: openai_teacher_example.yaml  teacher_example.yaml
configs/training/: sft_example.yaml
data_registry/: data_sources.yaml  schema.md
docs/: benchmark_processing.md  hf_data_discovery.md  loogle_download.md  loogle_processing.md  pipeline.md  setup.md
experiments/: README.md
experiments/evalscope_long_context/: README.md
experiments/evalscope_long_context/configs/: baseline_longbench_v2.yaml  compare_template.yaml  smoke_longbench_v2.yaml
experiments/evalscope_long_context/scripts/: collect_run_metadata.py  parse_evalscope_outputs.py  run_evalscope_from_config.py  run_evalscope_smoke.sh  summarize_runs.py
experiments/evalscope_long_context/templates/: blocking_issue.md  run_manifest.yaml  run_notes.md
scripts/: build_delivery_dataset_report.py  clean_lcqa_dataset.py  discover_hf_candidates.py  download_loogle.py  download_zai_benchmarks.py  filter_all_lcqa.py  filter_lcqa_by_tokens.py  label_filtered_lcqa_openai.py  label_lcqa_openai.py  normalize_benchmarks.py  normalize_loogle.py  render_sft.py  run_serial_filter_and_discovery.sh  summarize_filtered_buckets.py  validate_lcqa.py
src/longcontext/: __init__.py  benchmark_guard.py  discovery.py  io.py  length.py  render.py  schema.py
